# passfd

./: Makefile.in  aclocal.m4  autoconfig.h  autoconfig.h.in  client.c  configure  configure.in  mkinstalldirs  passfd.c  passfd.h  server.c
