AC_INIT(server.c)
PACKAGE=passfd
VERSION=1.0
AC_CONFIG_HEADER(autoconfig.h)
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

LDFLAGS="$LDFLAGS -L/usr/local/lib"
CFLAGS="$CFLAGS -I/usr/local/include"
CPPFLAGS="$CPPFLAGS -I/usr/local/include"

AC_PROG_CC

dnl Checks for programs.
if test $CC = "gcc"; then
	CFLAGS="$CFLAGS -Wall"
fi
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(\
	arpa/inet.h\
	netdb.h\
	netinet/in.h\
	sys/socket.h\
	sys/types.h\
	sys/wait.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_LIBRARY_NET
AC_LIBRARY_STD
AC_SENDFD

##AC_CHECK_FUNCS()
AC_OUTPUT(Makefile)
